# trRouting

./: .gitignore  Dockerfile  LICENSE  MakeFile  MakeFile.ubuntu  MakeFileCSA  Makefile.am  README.md  TripBasedMakeFile  configure.ac  stxxl.errlog  trRoutingCSA  trRoutingConfig.example.yml  trRoutingConfig.yml  tr_mtl_a2016_modelisation_stops.capnpbin
connection_scan_algorithm/src/: Makefile.am  alternatives_routing.cpp  calculator.cpp  connection_scan_algorithm.cpp  connection_scan_algorithm_old.cpp  db_fetcher.cpp  forward_calculation.cpp  forward_journey.cpp  initializations.cpp  od_trips_routing.cpp  optimize_journey.cpp  parameters.cpp  preparations.cpp  program_options.cpp  resets.cpp  result_to_v1.cpp  result_to_v2.cpp  result_to_v2_accessibility.cpp  result_to_v2_summary.cpp  reverse_calculation.cpp  reverse_journey.cpp  reverse_journey.cppOLD  route_parameters.cpp  transit_routing_http_server.cpp
connection_scan_algorithm/src/parameters/: accessibility_parameters.cpp  common_parameters.cpp  legacyV1_parameters.cpp  route_parameters.cpp
docs/: API.yml  APIv2.yml  index.html  parameters.yml
hooks/: post_checkout
include/: Makefile.am  agency.hpp  block.hpp  json.hpp  (+48 more)
include/capnp/: Makefile.am  _generating_classes.txt  agenciesCollection.capnp  agenciesCollection.capnp.c++  agenciesCollection.capnp.h  agencyCollection.capnp  agencyCollection.capnp.c++  agencyCollection.capnp.h  blocksCollection.capnp  blocksCollection.capnp.c++  blocksCollection.capnp.h  connectionCollection.capnpDEPRECATED  connectionsCollection.capnp  connectionsCollection.capnp.c++  connectionsCollection.capnp.h  dataSource.capnp  dataSource.capnp.c++  dataSource.capnp.h  dataSourceCollection.capnp  dataSourceCollection.capnp.c++  dataSourceCollection.capnp.h  dataSources.capnp.h  dataSourcesCollection.capnp  dataSourcesCollection.capnp.c++  dataSourcesCollection.capnp.h  footpathsCollection.capnp  footpathsCollection.capnp.c++  footpathsCollection.capnp.h  garageCollection.capnp  household.capnp  household.capnp.c++  household.capnp.h  householdCollection.capnp  householdCollection.capnp.c++  householdCollection.capnp.h  householdsCollection.capnp  householdsCollection.capnp.c++  householdsCollection.capnp.h  line.capnp  line.capnp.c++  (+96 more)
src/: Makefile.am  agencies_cache_fetcher.cpp  cache_fetcher.cpp  calculation_time.cpp  connection_cache.cpp  connection_set.cpp  connections_cache_fetcher.cpp  csv_fetcher.cpp  data_sources_cache_fetcher.cpp  database_fetcher.cpp  euclideangeofilter.cpp  geofilter.cpp  gtfs_fetcher.cpp  households_cache_fetcher.cpp  households_fetcher.cpp  lines_cache_fetcher.cpp  modes_initialization.cpp  networks_cache_fetcher.cpp  nodes_cache_fetcher.cpp  od_trips_cache_fetcher.cpp  osrm_fetcher.cpp  osrmgeofilter.cpp  paths_cache_fetcher.cpp  persons_cache_fetcher.cpp  places_cache_fetcher.cpp  proto_connection.pb.cpp  proto_connections.pb.cpp  proto_footpath.pb.cpp  proto_footpath_range.pb.cpp  proto_footpaths.pb.cpp  proto_od_trip.pb.cpp  proto_od_trip_footpath.pb.cpp  proto_od_trips.pb.cpp  proto_point.pb.cpp  proto_route.pb.cpp  proto_routes.pb.cpp  proto_stop.pb.cpp  proto_stops.pb.cpp  proto_trip.pb.cpp  proto_trips.pb.cpp  (+5 more)
tests/cache_fetch/: Makefile.am  agencies_cache_fetcher_test.cpp  cache_fetcher_test.cpp  cache_fetcher_test.hpp  data_sources_cache_fetcher_test.cpp  households_cache_fetcher_test.cpp  lines_cache_fetcher_test.cpp  networks_cache_fetcher_test.cpp  nodes_cache_fetcher_test.cpp  od_trips_cache_fetcher_test.cpp  paths_cache_fetcher_test.cpp  persons_cache_fetcher_test.cpp  places_cache_fetcher_test.cpp  scenarios_cache_fetcher_test.cpp  schedules_cache_fetcher_test.cpp  services_cache_fetcher_test.cpp  stations_cache_fetcher_test.cpp
tests/cache_fetch/testCache/invalidCacheFiles/: genericInvalid.capnpbin
tests/cache_fetch/testCache/validCacheFiles/: agencies.capnpbin  dataSources.capnpbin  lines.capnpbin  networks.capnpbin  nodes.capnpbin  paths.capnpbin  scenarios.capnpbin  services.capnpbin
tests/cache_fetch/testCache/validCacheFiles/lines/: line_6465a779-b643-4dee-b69a-b9ee70cee270.capnpbin  line_9df709c1-79dd-4c87-8eac-f161852a986f.capnpbin
tests/cache_fetch/testCache/validCacheFiles/nodes/: node_1486c26c-a43f-4e66-8e56-e2a4cc914af4.capnpbin  node_22428b0f-4769-4b56-995c-53c9b3fbb8bc.capnpbin  node_26423966-b227-4fa4-a30d-0afeb1136669.capnpbin  node_32dfbe3f-38d8-43d1-94b4-3400d5b6d563.capnpbin  node_36e2c694-35dd-406c-903c-e8cc597a2582.capnpbin  node_4399faf8-bca6-403b-8597-2b2f833a9ed9.capnpbin  node_6bcadf99-2558-4adf-8f43-27a9bc1a9b71.capnpbin  node_6cba5d25-4d4f-45ab-9783-22ba5a984f2e.capnpbin  node_751d787e-1b83-4cbc-ba37-7d9c2ea996e4.capnpbin  node_7eeccb07-b179-4ee3-9f8d-fe7686de3875.capnpbin  node_c80ab27a-1ce1-4216-8115-0d2d199304b3.capnpbin
tests/connection_scan_algorithm/: Makefile.am  benchmark_CSA_test.cpp  benchmark_CSA_test.hpp  combinations_test.cpp  connection_cache_test.cpp  connection_set_test.cpp  connection_set_test.hpp  csa_access_map_test.cpp  csa_odtrips_calculation_test.cpp  csa_result_to_response_test.cpp  csa_result_to_response_test.hpp  csa_result_to_v1_test.cpp  csa_result_to_v2_accessibility_test.cpp  csa_result_to_v2_summary_test.cpp  csa_result_to_v2_test.cpp  csa_route_calculation_test.cpp  csa_route_calculation_test.hpp  csa_route_transfer_alternatives_test.cpp  csa_simple_calculation_test.cpp  csa_test_base.cpp  csa_test_base.hpp  csa_test_data_fetcher.cpp  csa_test_data_fetcher.hpp  csa_transfer_and_alternatives_test.cpp  csa_v1_access_map_test.cpp  csa_v1_odtrips_calculation_test.cpp  csa_v1_simple_calculation_test.cpp  csa_v1_simple_calculation_test.hpp  csa_v1_transfer_and_alternatives_test.cpp  gtest.cpp  route_parameters_test.cpp
tests/connection_scan_algorithm/parameters/: accessibility_param_test.cpp  parameters_test.hpp  route_param_test.cpp
tests/connection_scan_algorithm/src/benchmark/: alternative_routing_test.hpp  alternatives_routing_test.cpp
tests/connection_scan_algorithm/unit_test_data_gtfs/: agency.txt  calendar.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
(+181 files in other folders)
