AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/connection_scan_algorithm/include

noinst_LTLIBRARIES = libcsa.la

libcsa_la_SOURCES = alternatives_routing.cpp \
		   calculator.cpp \
		   forward_calculation.cpp \
		   forward_journey.cpp \
		   initializations.cpp \
		   od_trips_routing.cpp \
		   optimize_journey.cpp \
		   parameters.cpp \
		   preparations.cpp \
		   program_options.cpp \
		   resets.cpp \
		   reverse_calculation.cpp \
		   reverse_journey.cpp \
		   route_parameters.cpp \
		   result_to_v1.cpp \
		   result_to_v2.cpp \
		   transit_routing_http_server.cpp
